new file:   StartUp.lnk 	deleted:    build/main/Analysis-00.toc 	deleted:    build/main/EXE-00.toc 	deleted:    build/main/PKG-00.toc 	deleted:    build/main/PYZ-00.pyz 	deleted:    build/main/PYZ-00.toc 	deleted:    build/main/base_library.zip 	deleted:    build/main/localpycs/pyimod01_archive.pyc 	deleted:    build/main/localpycs/pyimod02_importers.pyc 	deleted:    build/main/localpycs/pyimod03_ctypes.pyc 	deleted:    build/main/localpycs/pyimod04_pywin32.pyc 	deleted:    build/main/localpycs/struct.pyc 	deleted:    build/main/main.exe.manifest 	deleted:    build/main/main.pkg 	deleted:    build/main/warn-main.txt 	deleted:    build/main/xref-main.html 	modified:   config.ini 	deleted:    dist/main.exe 	modified:   main.exe

--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,6 @@
 [home]
-between = 40
-last = 2
-used = 0
-path = path
+between = 2
+last = 1
+used = 1
+path = E:\RestReminder_HistoryVersion\RestReminderV0.0.2
 
